--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.mjs",
   "scripts": {
     "start": "node index.mjs",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest"
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' NODE_NO_WARNINGS=1 jest"
   },
   "author": "",
   "license": "ISC",
